--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "irazasyed/telegram-bot-sdk": "^3.15",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
@@ -17,7 +18,8 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0.1"
+        "phpunit/phpunit": "^11.0.1",
+        "symfony/var-dumper": "^7.2"
     },
     "autoload": {
         "psr-4": {
